# sibson_interpolation

./: CMakeLists.txt  README.md  cimg.h  console.h  draw_figure.py  main.cpp  point.h  random.h  sibson.h
